    misleading users into believing that an option will erase less than it
    in fact does.  Therefore, never describe the use_device autopartitioning
    mode in any way other than "Erase disk and install Ubuntu", and offer
    separate "Erase Ubuntu <version> and reinstall" and "Erase disk and
    install Ubuntu" options even if we believe that the disk only contains
    Ubuntu (LP: #1265192).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 16 Oct 2014 00:34:57 +0100

ubiquity (2.19.10) utopic; urgency=medium

  * KDE: set widget and icon theme to breeze if using Plasma 5
  * Automatic update of included source packages: grub-installer
    1.78ubuntu23.

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 13 Oct 2014 18:09:11 +0200

ubiquity (2.19.9) utopic; urgency=medium

  * Revert Update ubiquity.ubiquity.upstart and bin/ubiquity to add
    support for SDDM, ubiquity-dm to SDDM transition is buggy and I
    can't work out how to debug it
  * Automatic update of included source packages: flash-kernel
    3.0~rc.4ubuntu53, grub-installer 1.78ubuntu22, user-setup
    1.48ubuntu3.

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 06 Oct 2014 15:46:56 +0100

ubiquity (2.19.8) utopic; urgency=medium

  [ Colin Watson ]
  * Avoid closing /dev/urandom persistent FD on oem-config startup (thanks,
    Jamin W. Collins; LP: #1362920).

  [ Chris Bainbridge ]
  * Fix Windows UEFI detection. (LP: #1265192)

 -- Stéphane Graber <stgraber@ubuntu.com>  Fri, 12 Sep 2014 14:35:57 -0400

ubiquity (2.19.7) utopic; urgency=medium

  * Update ubiquity.ubiquity.upstart and bin/ubiquity to add support for SDDM

 -- Rohan Garg <rohangarg@kubuntu.org>  Mon, 01 Sep 2014 13:51:49 +0200

ubiquity (2.19.6) utopic; urgency=medium

  * ubiquity/plugins/ubi-console-setup.py: use untranslated keyboard
    names, the GTK side does not translate them and comments say they
    do not work.  KDE frontend has crashes due to keyboard names being
    translated so give up for now.  LP: #1182784
